# multi-agent

./: .env.example  .gitignore  ARCHITECTURE.md  Arquitetura Multi-Agent POC.md  Dockerfile  IMPLEMENTATION_GUIDE.md  LICENSE  PURE_FASTMCP_IMPLEMENTATION.md  README.md  REFACTORING_SUMMARY.md  STARTUP_GUIDE.md  docker-compose.yml  pyproject.toml  refatorar_multiagent_struct.sh  requirements.txt  run.sh  run_example.py  run_mcp_server.sh  run_orchestrator.sh  run_pure_fastmcp.sh  run_weather_agent.sh  setup_permissions.sh
agent_cards/: weather_agent.json
apps/: README.md
apps/a2a-client/: README.md  a2a_client.py
apps/mcp-client/: README.md  mcp_client.py
docs/: IMPLEMENTATION_FILES.md
src/: __init__.py  a2a_main.py  main.py
src/a2a_mcp/agents/: __main__.py  adk_travel_agent.py  langgraph_planner_agent.py  orchestrator_agent.py  weather_agent.py
src/a2a_mcp/common/: utils.py
src/a2a_mcp/mcp/: client.py  server.py
src/agents/: __init__.py  a2a_weather_agent.py  base_agent.py  planner_agent.py  travel_agent.py  weather_agent.py
src/config/: settings.py
src/core/: __init__.py
src/core/application/: __init__.py
src/core/domain/: __init__.py  models.py  repositories.py
src/infrastructure/: __init__.py
src/infrastructure/adapters/: __init__.py
src/mcp_server/: __init__.py  server.py
src/mcp_server/tools/: __init__.py  weather_tools.py
src/mcp_servers/: weather_server.py
src/orchestrator/: api.py  dynamic_tools.py  graph.py  mcp_client.py  state.py
tests/: test_example.py
tests/unit/: test_models.py
(+12 files in other folders)
