[project]
name = "multiagent-langgraph-mcp"
version = "2.0.0"
description = "Multi-Agent system using LangGraph + MCP (A2A completely removed)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=1.0",
    "mcp[cli]>=1.5.0",
    "langgraph>=0.4.1",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.10",
    "httpx>=0.28.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.11.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
multi-agent = "src.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
